--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                                 <textarea class="form-control border-0" rows="5" placeholder="Message"></textarea>
                             </div>
                             <div class="col-12">
-                       <a class="btn btn-primary w-100 py-3"   href="https://web.whatsapp.com/send?phone=2637156657512&amp;text=Hello%2C+I+would+like+a+qoute%3A%0D%0A%0D%0A*+%287L%29*%0D%0A*:*%20.00%0D%0A*URL:*%20https%3A%2F%2Fpurpleknotkitchensandconstruction.com%%0AThank+you%21"  role="button" target="_blank">Send Message </a>
+                         <a class="btn btn-primary w-100 py-3"  href="https://web.whatsapp.com/send?phone=263786457346&amp;text=Hello%2C+I+would+like+to+buy%3A%0D%0A%0D%0A*Winchester+Cocktail+Glass+Set+of+2+%287L%29*%0D%0A*Price:*%20$25.00%0D%0A*URL:*%20https%3A%2F%2Fshazim-stores.co.zw%%0AThank+you%21"  role="button" target="_blank">Send Message </a>
                             </div>
                         </div>
                     </form>
