--- a/index.html
+++ b/index.html
@@ -410,8 +410,7 @@
     </div>
     <!-- Portfolio End -->
 
-
-    <!-- Team Start -->
+ <!-- Team Start -->
     <div class="container-fluid py-6 px-5">
         <div class="text-center mx-auto mb-5" style="max-width: 600px;">
             <h1 class="display-5 text-uppercase mb-4">We Are <span class="text-primary" style="color: #800 !important;">Professional & Expert</span> Workers</h1>
@@ -421,7 +420,7 @@
                 <div class="row g-0">
                     <div class="col-10" style="min-height: 300px;">
                         <div class="position-relative h-100">
-                            <img class="position-absolute w-100 h-100" src="img/PK/person.png" style="object-fit: cover;">
+                            <img class="position-absolute w-100 h-100" src="img/PK/person1 (1).jpg" style="object-fit: cover;">
                         </div>
                     </div>
                     <div class="col-2">
