--- a/gallery.html
+++ b/gallery.html
@@ -103,7 +103,7 @@
     <!-- Page Header Start -->
     
 
-   <!-- Portfolio Start -->
+  <!-- Portfolio Start -->
    <div class="container-fluid bg-light py-6 px-5">
     <div class="text-center mx-auto mb-5" style="max-width: 600px;">
         <h1 class="display-5 text-uppercase mb-4">Some Of Our <span class="text-primary" style="color: #800 !important;">Popular</span> Dream Projects</h1>
@@ -207,9 +207,118 @@
                 </a>
             </div>
         </div>
+        <div class="col-xl-4 col-lg-6 col-md-6 portfolio-item second">
+            <div class="position-relative portfolio-box">
+                <img class="img-fluid w-100" src="img/PK/p6.png" alt="">
+                <a class="portfolio-title shadow-sm" href="">
+                    <p class="h4 text-uppercase">Kitchen Cupboards</p>
+                    <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2" style="color: #800 !important;"></i>Location, City, Country</span>
+                </a>
+                <a class="portfolio-btn" href="img/PK/p6.png" data-lightbox="portfolio">
+                    <i class="bi bi-plus text-white" style="color: #800 !important;"></i>
+                </a>
+            </div>
+        </div>
+        <div class="col-xl-4 col-lg-6 col-md-6 portfolio-item second">
+            <div class="position-relative portfolio-box">
+                <img class="img-fluid w-100" src="img/PK/p5.png" alt="">
+                <a class="portfolio-title shadow-sm" href="">
+                    <p class="h4 text-uppercase">House Construction</p>
+                    <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2" style="color: #800 !important;"></i>Location, City, Country</span>
+                </a>
+                <a class="portfolio-btn" href="img/PK/p5.png" data-lightbox="portfolio">
+                    <i class="bi bi-plus text-white" style="color: #800 !important;"></i>
+                </a>
+            </div>
+        </div>
+        <div class="col-xl-4 col-lg-6 col-md-6 portfolio-item second">
+            <div class="position-relative portfolio-box">
+                <img class="img-fluid w-100" src="img/PK/p7.png" alt="">
+                <a class="portfolio-title shadow-sm" href="">
+                    <p class="h4 text-uppercase">Kitchen</p>
+                    <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2" style="color: #800 !important;"></i>Location, City, Country</span>
+                </a>
+                <a class="portfolio-btn" href="img/PK/p7.png" data-lightbox="portfolio">
+                    <i class="bi bi-plus text-white" style="color: #800 !important;"></i>
+                </a>
+            </div>
+        </div>
+        <div class="col-xl-4 col-lg-6 col-md-6 portfolio-item second">
+            <div class="position-relative portfolio-box">
+                <img class="img-fluid w-100" src="img/PK/p9.png" alt="">
+                <a class="portfolio-title shadow-sm" href="">
+                    <p class="h4 text-uppercase">Suspended Ceiling</p>
+                    <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2" style="color: #800 !important;"></i>Location, City, Country</span>
+                </a>
+                <a class="portfolio-btn" href="img/PK/p9.png" data-lightbox="portfolio">
+                    <i class="bi bi-plus text-white" style="color: #800 !important;"></i>
+                </a>
+            </div>
+        </div>
+        <div class="col-xl-4 col-lg-6 col-md-6 portfolio-item second">
+            <div class="position-relative portfolio-box">
+                <img class="img-fluid w-100" src="img/PK/p10 (1).jpg" alt="">
+                <a class="portfolio-title shadow-sm" href="">
+                    <p class="h4 text-uppercase">Suspended Ceiling</p>
+                    <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2" style="color: #800 !important;"></i>Location, City, Country</span>
+                </a>
+                <a class="portfolio-btn" href="img/PK/p11 (1).jpg" data-lightbox="portfolio">
+                    <i class="bi bi-plus text-white" style="color: #800 !important;"></i>
+                </a>
+            </div>
+        </div>
+        <div class="col-xl-4 col-lg-6 col-md-6 portfolio-item second">
+            <div class="position-relative portfolio-box">
+                <img class="img-fluid w-100" src="img/PK/p11 (1).jpg" alt="">
+                <a class="portfolio-title shadow-sm" href="">
+                    <p class="h4 text-uppercase">Dining Designs</p>
+                    <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2" style="color: #800 !important;"></i>Location, City, Country</span>
+                </a>
+                <a class="portfolio-btn" href="img/PK/p10 (1).jpg" data-lightbox="portfolio">
+                    <i class="bi bi-plus text-white" style="color: #800 !important;"></i>
+                </a>
+            </div>
+        </div>
+        <div class="col-xl-4 col-lg-6 col-md-6 portfolio-item second">
+            <div class="position-relative portfolio-box">
+                <img class="img-fluid w-100" src="img/PK/p12 (1).jpg" alt="">
+                <a class="portfolio-title shadow-sm" href="">
+                    <p class="h4 text-uppercase">Solar Installation</p>
+                    <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2" style="color: #800 !important;"></i>Location, City, Country</span>
+                </a>
+                <a class="portfolio-btn" href="img/PK/p12 (1).jpg" data-lightbox="portfolio">
+                    <i class="bi bi-plus text-white" style="color: #800 !important;"></i>
+                </a>
+            </div>
+        </div>
+        <div class="col-xl-4 col-lg-6 col-md-6 portfolio-item second">
+            <div class="position-relative portfolio-box">
+                <img class="img-fluid w-100" src="img/PK/p13 (1).jpg" alt="">
+                <a class="portfolio-title shadow-sm" href="">
+                    <p class="h4 text-uppercase">Flooring</p>
+                    <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2" style="color: #800 !important;"></i>Location, City, Country</span>
+                </a>
+                <a class="portfolio-btn" href="img/PK/p13 (1).jpg" data-lightbox="portfolio">
+                    <i class="bi bi-plus text-white" style="color: #800 !important;"></i>
+                </a>
+            </div>
+        </div>
+        <div class="col-xl-4 col-lg-6 col-md-6 portfolio-item second">
+            <div class="position-relative portfolio-box">
+                <img class="img-fluid w-100" src="img/PK/p14 (1).jpg" alt="">
+                <a class="portfolio-title shadow-sm" href="">
+                    <p class="h4 text-uppercase">Bathroom Sinks</p>
+                    <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2" style="color: #800 !important;"></i>Location, City, Country</span>
+                </a>
+                <a class="portfolio-btn" href="img/PK/p14 (1).jpg" data-lightbox="portfolio">
+                    <i class="bi bi-plus text-white" style="color: #800 !important;"></i>
+                </a>
+            </div>
+        </div>
     </div>
 </div>
 <!-- Portfolio End -->
+
 
     <!-- Footer Start -->
     <div class="footer container-fluid position-relative bg-dark bg-light-radial text-white-50 py-6 px-5">
