--- a/gallery.html
+++ b/gallery.html
@@ -380,11 +380,11 @@
                 <p><i class="fa fa-map-marker-alt me-2"></i>Whitecliff Harare,Zimbabwe</p>
                 <p><i class="fa fa-phone-alt me-2"></i>+263 71 566 5751</p>
                 <p><i class="fa fa-envelope me-2"></i>purpleknotkitchensandconstruct@gml.com</p>
-                <div class="d-flex justify-content-start mt-4">
-                    <a class="btn btn-lg btn-primary btn-lg-square rounded-0 me-2" href="https://freewebsitecode.com/"><i class="fab fa-twitter"></i></a>
-                    <a class="btn btn-lg btn-primary btn-lg-square rounded-0 me-2" href="https://facebook.com/freewebsitecode/"><i class="fab fa-facebook-f"></i></a>
-                    <a class="btn btn-lg btn-primary btn-lg-square rounded-0 me-2" href="https://freewebsitecode.com/"><i class="fab fa-linkedin-in"></i></a>
-                    <a class="btn btn-lg btn-primary btn-lg-square rounded-0" href="https://youtube.com/freewebsitecode/"><i class="fab fa-youtube"></i></a>
+                 <div class="d-flex justify-content-start mt-4">
+                    <a class="btn btn-lg btn-primary btn-lg-square rounded-0 me-2" href=""><i class="fab fa-twitter"></i></a>
+                    <a class="btn btn-lg btn-primary btn-lg-square rounded-0 me-2" href="https://www.facebook.com/profile.php?id=100083093894398"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-lg btn-primary btn-lg-square rounded-0 me-2" href=""><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-lg btn-primary btn-lg-square rounded-0" href=""><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
             <div class="col-lg-6 ps-lg-5">
