--- a/gallery.html
+++ b/gallery.html
@@ -332,7 +332,7 @@
     <section class="blogs" id="blogs">
         <div class="text-center mx-auto mb-5" style="max-width: 500px;">
             <h1 class="display-5">Video Review Slider</h1>
-            <hr class="w-25 mx-auto text-primary" style="opacity: 1;">
+             <hr class="w-25 mx-auto text-primary" style="opacity: 1; color: #800;">
         </div>
         <div class="swiper blogs-slider">
           <div class="swiper-wrapper">
